--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-imask": "^6.4.3",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.1.2",
+    "react-phone-number-input": "^3.2.13",
+    "react-text-mask": "^5.5.0"
   }
 }
