--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.1.0",
     "next": "13.1.0",
     "react": "18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-imask": "^6.4.3",
