--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/font": "13.1.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "formik": "^2.2.9",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-carousel": "^4.3.0",
@@ -30,6 +31,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-number-format": "^5.1.2",
     "react-phone-number-input": "^3.2.13",
-    "react-text-mask": "^5.5.0"
+    "react-text-mask": "^5.5.0",
+    "yup": "^0.32.11"
   }
 }
