corrigido o campo telefone(agora os dados estão sendo coletados no método onFocus)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-input-mask": "^2.0.4",
     "react-material-ui-carousel": "^3.4.2",
     "react-number-format": "^5.1.2",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.13",
     "react-text-mask": "^5.5.0",
     "yup": "^0.32.11"
