--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "^5.11.1",
     "@mui/styles": "^5.11.1",
     "@next/font": "13.1.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "formik": "^2.2.9",
+    "mongoose": "^6.8.1",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-carousel": "^4.3.0",
