--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@mui/material": "^5.11.1",
     "@mui/styles": "^5.11.1",
     "@next/font": "13.1.0",
+    "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "formik": "^2.2.9",
     "mongoose": "^6.8.1",
     "next": "13.1.0",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-carousel": "^4.3.0",
     "react-currency-format": "^1.1.0",
@@ -34,6 +36,7 @@
     "react-number-format": "^5.1.2",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.13",
+    "react-router-dom": "^6.6.1",
     "react-text-mask": "^5.5.0",
     "yup": "^0.32.11"
   }
